--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,7 @@
 vscode:
   extensions:
-    - Dart-Code.flutter
-    - Dart-Code.dart-code
+    - Dart-Code.flutter@3.13.2:Eu9AIooF0l9SZOqPOxXFHQ==
+    - Dart-Code.dart-code@3.13.2:VctB/eBxSv/owCFRO3X0fA==
 
 image:
   file: .gitpod.Dockerfile
- 
